--- a/w03.md
+++ b/w03.md
@@ -59,10 +59,13 @@ https://kyoungwhankim.github.io/ko/blog/color_linearworkflow/
 포토샵 등 대부분 프로그램에서는 감마 보정 자동으로 해줌 (안하면 훨씬 더 밝은 이미지로 표현 됨)     
 https://www.japanistry.com/understanding-gamma-in-photography/           
 <br/>
+<br/>
 
 __2. Linear Workflow__   
 <br/>
-* 모든 그래픽 작업이 선형 색 공간(Linear Color Space)에서 이루어지는 방식 (저장할 때 중요)
+* 모든 그래픽 작업이 선형 색 공간(Linear Color Space)에서 이루어지는 방식 <br/>
+     >이미지를 저장할 때 중요! 이미지를 export할 때 올바를 color space를 골라준다
+<br/>
 <br/>
 
 * 우리가 2D, 3D 그래픽 툴을 사용할 때 jpeg와 같은 이미지 파일을 쓰기 마련     
@@ -74,8 +77,19 @@ __2. Linear Workflow__
 <br/>
 * 예컨대 위와 같이 색의 블랜딩을 할 경우, 선형 색 공간에서의 블랜딩은 밝은 부분이 자연스럽게 합쳐지지만, 감마 색 공간에서의 블랜딩은 밝은 부분이 지나치게 진하고 경계가 생김          
 * 그 이유는 감마 색 공간에서의 이미지들은 위에서 봤듯 한 번 밝아진 상태의 이미지들이며, 선형 색 공간에서의 이미지들은 밝아진 이미지에 역으로 감마 보정을 가하여 원래 색상과 밝기로 되돌린 이미지들이기 때문      
-* 따라서 선형 색 공간에서 작업을 하는 것이 권장되며 마지막 렌더링 시 다시 감마 인코딩을 통해 밝게 만들고, 이렇게 저장된 이미지들은 디스플레이 장치에서 다시금 어둡게 조정되어 우리가 기대하는 이미지로 출력됨
+* 따라서 선형 색 공간에서 작업을 하는 것이 권장되며 마지막 렌더링 시 다시 감마 인코딩을 통해 밝게 만들고, 이렇게 저장된 이미지들은 디스플레이 장치에서 다시금 어둡게 조정되어 우리가 기대하는 이미지로 출력됨     
+https://kyoungwhankim.github.io/ko/blog/color_linearworkflow/
 <br/>
+
+* 즉, 8비트 sRGB파일들의 감마이슈로 인해 보정을 해줘야하는데       
+ 리니어 작업을 해주지 않으면 저장했을 때 커브가 더 과하게 표현(더 밝게, 더 어둡게)될 수 있기 때문에 하는 것      
+ (Gamma 1이 리니어 커브)
+ <br/>
+ 
+ 요즘은 자동으로 degamma를 해서 리니어로 보이도록 보정을 해줌     
+ 마야에서 불러온 jpg 파일이 더 어둡게/밝게 보인다하면 컬러스페이스를 sRGB로 바꿔주면 됨
+ <br/>
+ <br/>
 
 * 정리      
 
