--- a/w03.md
+++ b/w03.md
@@ -64,8 +64,7 @@ https://www.japanistry.com/understanding-gamma-in-photography/
 __2. Linear Workflow__   
 <br/>
 * 모든 그래픽 작업이 선형 색 공간(Linear Color Space)에서 이루어지는 방식 <br/>
-     >이미지를 저장할 때 중요! 이미지를 export할 때 올바를 color space를 골라준다
-<br/>
+     >이미지를 저장할 때 중요! 이미지를 export할 때 올바른 color space를 골라준다
 <br/>
 
 * 우리가 2D, 3D 그래픽 툴을 사용할 때 jpeg와 같은 이미지 파일을 쓰기 마련     
@@ -102,3 +101,49 @@ https://kyoungwhankim.github.io/ko/blog/color_linearworkflow/
 
 ![2021-10-19 00 04 25](https://user-images.githubusercontent.com/90597915/137758589-9089d167-00a8-4e99-87e6-0991d97ef186.png)     
 https://mgun.tistory.com/1166
+ <br/>
+ <br/>
+ 
+ __3.Aces__
+  <br/>
+   <br/>
+
+ ACES: Academy Color Encoding System
+ <br/>
+
+   * 색에 대한 업계 표준으로 설계
+   * 촬영부터 후반작업, 배급에 이르기까지 모든 유형의 컬러 매니지먼트에 대한 일련의 가이드라인 및 설명서
+   * 인간이 볼 수 있는 모든 색을 포함하고 있으며, 이것은 컬러 스페이스의 제약이나 제한이 없다는 것을 의미
+   * 일관성과 하이퀄리티 컬러 매니지먼트를 유지하는 동시에 통합 문제를 해결하기 위해 만들어짐     
+https://blog.naver.com/baekhyebin/222092359528
+ 
+ ![rec 2020-vs-rec 709 001](https://user-images.githubusercontent.com/90597915/137763786-0868f5d5-24f7-409d-8b7e-db9c04c3075e.jpg)      
+ https://docs.nvidia.com/gameworks/content/devices/shield-hdr-dev-guide/hdr-dev-guide-nvidia-shield.htm
+ <br/>
+ <br/>
+ 
+ __4. Premultiplication__
+ <br/>
+ 
+* Pre-multipl-icat-ion      
+프리멀티를 통해 풀컬러픽셀(RGBA)를 표현      
+투명한 걸 얹어주는 작업을 하기 전에 RGB를 곱해줌      
+
+        ex. (r,g,b)      
+        (0.3, 0.1, 0.7) x0 　투명      
+                        x1　 불투명      
+                        x0.2 반투명
+ <br/>
+ <br/>
+ 
+ __포토샵 데모__
+  <br/>
+  
+ 디스플레이용 해상도는 72 (디스플레이가 표현할 수 있는 최대, 그 이상은 오버스펙)      
+인쇄용은 300
+ <br/>
+ 
+8bit의 경우 Color Profile(컬러스페이스 옵션)은 웬만하면 sRGB      
+16/32bit는 Linear Space를 많이 사용하기 때문에 다양한 컬러스페이스 중에서 최종 상영할 것에 맞춰 선택할 수 있음
+
+
